@@ -1,0 +1,40 @@
+<?php
+/**
+ * File containing the ezcPersistentSessionNotFound class.
+ *
+ * @package PersistentObject
+ * @version //autogentag//
+ * @copyright Copyright (C) 2005, 2006 eZ systems as. All rights reserved.
+ * @license http://ez.no/licenses/new_bsd New BSD License
+ */
+
+/**
+ * This exceptions is used when a database handler could not be found.
+ *
+ * @package PersistentObject
+ */
+class ezcPersistentSessionNotFoundException extends ezcPersistentObjectException
+{
+    /**
+     * Constructs a new exception.
+     *
+     * $name specifies the name of the name of the handler to use.
+     * $known is a list of the known database handlers.
+     */
+    public function __construct( $name, array $known = array() )
+    {
+        if ( $name == '' || $name == null )
+        {
+            $name = 'no name provided';
+        }
+        $message = "Could not find the persistent session: {$name}.";
+
+        if ( count( $known ) > 0 )
+        {
+            $knownMessage = ' The known sessions are: ' . implode( ', ', $known ) . '.';
+            $message .= $knownMessage;
+        }
+        parent::__construct( $message );
+    }
+}
+?>
