@@ -15,6 +15,7 @@ require_once( 'managers/code_manager_test.php' );
 require_once( 'persistent_session_test.php' );
 require_once( 'find_iterator_test.php' );
 require_once( 'manual_generator_test.php' );
+require_once( 'persistent_session_instance_test.php' );
 
 /**
  * @package PersistentObject
@@ -31,6 +32,7 @@ class ezcPersistentObjectSuite extends ezcTestSuite
             $this->addTest( ezcPersistentSessionTest::suite() );
             $this->addTest( ezcPersistentFindIteratorTest::suite() );
             $this->addTest( ezcPersistentManualGeneratorTest::suite() );
+            $this->addTest( ezcPersistentSessionInstanceTest::suite() );
 	}
 
     public static function suite()
